--- a/projects/pro 2/index.html
+++ b/projects/pro 2/index.html
@@ -30,14 +30,7 @@
 
 <div class="content">
 
-<div class="box box1">   <iframe src="https://youtu.be/WZPxhautt9g " frameborder="0" allowfullscreen=""></iframe>
-    <!-- <a href=" https://youtu.be/WZPxhautt9g"> 
-        <div class="background" >
-             <h1>click to watch video at youtube</h1>
-        </div>
-    
-       <img src="video/work-two.png" alt="">
-    </a> -->
+<div class="box box1">   <video src="video/0722.mp4" controls></video>
 </div> 
 
 <!-- <div class="box box4">
